--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CleanArchitecture
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/clean_db
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/clean_arch
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
